updates, stats game added, kkas ar custom skin datubazi nav pabeigts

--- a/slide/main.html
+++ b/slide/main.html
@@ -35,6 +35,17 @@
     <button id="placeBet" type="submit" class="submit-btn">Place Bet</button>
   </div>
 </form>
+<div class="divider"></div>
+<div class="container4">
+<div class="column">
+  <h2>Vidējais reizinātājs</h2>
+  <p id="avgTarget">Connecting..</p>
+</div>
+<div class="column">
+  <h2>Augstākais reizinātājs</h2>
+  <p id="maxTarget">Connecting..</p>
+</div>
+</div>
 <footer>
   <h2 id="connectionStatus">Connecting</h2>
   
