--- a/slide/main.html
+++ b/slide/main.html
@@ -28,7 +28,7 @@
 </div>
 <form id="sendBet">
   <div class="input-container">
-    <input id="betAmount" max="10000" min="0.10" step="0.01" type="number" placeholder="$1.00" required>
+    <input id="betAmount" max="10000000" min="0.10" step="0.01" type="number" placeholder="$1.00" required>
     <input id="betTarget" type="number" step="0.01" placeholder="1.00x" required>
   </div>
   <div class="btn-container">
@@ -45,6 +45,12 @@
   <h2>Augstākais reizinātājs</h2>
   <p id="maxTarget">Connecting..</p>
 </div>
+<a style= "text-decoration: none;" target="_blank"id="highestBetID">
+<div class="column">
+  <h2 id="highestBetUser">Lielākā likme - Connecting</h2>
+  <p id="highestBet">Connecting..</p>
+</div>
+</a>
 </div>
 <footer>
   <h2 id="connectionStatus">Connecting</h2>
